# pico_LCD_IDE

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DrawData.h  ImageData.c  ImageData.h  Lenna.xcf  README.md  fix_typo.patch  main.c  mani.yaml  vorbere.yaml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md  module-overview.md
docs/reference/: events-queue.md  lcd-input.md  usb-hid.md
docs/user-guides/: startup-flow.md  ui-preview.md
src/: _main.c  main.c
src/events/: CMakeLists.txt  events.c  events.h
src/events/tests/: test_events.c
src/lcd/: CMakeLists.txt  DrawData.h  gpios.h  lcd.c  lcd.h  lcd_input.c  lcd_internal.h  lcd_platform.h
src/lcd/preview/: GUI_Paint.h  LCD_1in3.h  host_preview.h  host_preview_support.c  preview_main.c
src/lcd/res/: Lenna.c
src/lcd/tests/: test_lcd.c
src/pico/: CMakeLists.txt  pico.c  pico.h
src/pico/tests/: test_pico.c
src/tests/: test_main.c  test_support.h
src/usb/: CMakeLists.txt  tusb_config.h  usb.c  usb.h
src/usb/tests/: test_usb.c
